# TPHATE

./: .gitignore  .pypirc  README.md  api.py  environment.yml  environment_macos.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tphate.py  usage.ipynb  utils.py  verify_release.py  vne.py
.ipynb_checkpoints/: environment-checkpoint.yml  environment_macos-checkpoint.yml
docs/: CHANGELOG.md  RELEASE_GUIDE.md
example/: usage.ipynb
example/.ipynb_checkpoints/: usage-checkpoint.ipynb
examples/: usage.ipynb
src/TPHATE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tphate/: __init__.py  mds.py
src_data/: sub-04_early_visual_sherlock_movie_2dimension_embedding_TPHATE.npy
test/: test_tphate.py
tests/: usage.ipynb
tphate/: __init__.py  api.py  base.py  graphs.py  matrix.py  mds.py  tphate.py  utils.py  vne.py
tphate/.ipynb_checkpoints/: base-checkpoint.py  graphs-checkpoint.py  tphate-checkpoint.py
